quorum/test/tests/other/Pass/ClassWithConstants.quorum
use Libraries.Compute.Math
use Libraries.Compute.Random
class ClassWithConstants
    public constant integer k = 0
    constant number z = 1.0
    private text c = "9"
    public constant Math m
    private constant Random r
end